--- a/estudo-01.yaml
+++ b/estudo-01.yaml
@@ -8,4 +8,9 @@ metadata:
 nodeGroups:
   - name: ng-1
     instanceType: t2.small
-    desiredCapacity: 2
+    desiredCapacity: 3
+    ssh: # use existing EC2 key
+      publicKeyName: eks-course
+cloudWatch:
+  clusterLogging:
+    enableTypes: ["api", "audit", "authenticator"]
